<resources>
    <string name="app_name">CuteCatsApp</string>
    <string name="dummyTextNotes">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="intelligence">Intelligence:&#160;</string>
    <string name="high">High</string>
    <string name="craziness">Craziness:&#160;</string>
    <string name="good">Good</string>
    <string name="playfulness">Playfulness:&#160;</string>
    <string name="very">Very</string>
    <string name="friendliness">Friendliness:&#160;</string>
    <string name="notAvailable">Not available</string>
    <string name="foo">Foo</string>
    <string name="agility">Agility:&#160;</string>
    <string name="bar">Bar</string>
    <string name="happiness">Happiness:&#160;</string>
    <string name="stretchiness">Stretchiness:&#160;</string>
    <string name="baz">Baz</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internal_error">Internal Error</string>
    <string name="funniness">Funniness:&#160;</string>
    <string name="twice">twice</string>
    <string name="tediousness">Tediousness:&#160;</string>
    <string name="broken">broken</string>
</resources>
